--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -76,6 +76,9 @@ body {
 		color: $hard-color;
 	}
 	&__result-allHouse {
+		span {
+			background-color: $yellow;
+		}
 		margin: 30px;
 		font-size: 27px;
 	}
@@ -110,6 +113,7 @@ body {
 		border-radius: 10px;
 		padding: 15px;
 		font-size: 20px;
+		color: $main-color;
 	}
 	&__item {
 		background-color: $ez-color;
