--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -5,7 +5,7 @@
 
 .live {
 	&__wrapper {
-		max-width: 1000px;
+		max-width: 1250px;
 		margin: 0px auto;
 		display: flex;
 		justify-content: space-around;
@@ -126,4 +126,9 @@
 }
 ::placeholder {
 	color: $main-color;
+}
+.diagramma {
+	width: 300px;
+	height: 300px;
+	margin: 20px;
 }
