--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -127,8 +127,11 @@
 ::placeholder {
 	color: $main-color;
 }
-.diagramma {
+.chart {
 	width: 300px;
 	height: 300px;
 	margin: 20px;
+	canvas {
+		font-size: 20px;
+	}
 }
