--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -3,6 +3,10 @@
 	box-sizing: border-box;
 }
 
+body {
+	background: url('../img/mainbg.jpg') 50% / cover no-repeat;
+}
+
 .live {
 	&__wrapper {
 		max-width: 1250px;
@@ -36,13 +40,14 @@
 			border-radius: 10px;
 			margin: 0 auto 20px auto;
 			font-size: 20px;
-			color: $hard-color;
+			color: $main-color;
+			padding: 15px;
 		}
 		label {
 			display: block;
 			font-size: 25px;
 			text-align: center;
-			color: $hard-color;
+			color: $ez-color;
 			margin: 0 auto 5px auto;
 		}
 		button {
@@ -77,7 +82,11 @@
 	}
 	&__result-allHouse {
 		span {
-			background-color: $yellow;
+			display: block;
+			text-align: center;
+			border-radius: 10px;
+			height: 30px;
+			background-color: $ez-color;
 		}
 		margin: 30px;
 		font-size: 27px;
@@ -86,7 +95,7 @@
 		max-width: 100%;
 		margin: 0 auto;
 		padding: 10px;
-		background-color: $main-color;
+		//background-color: $main-color;
 		border-radius: 10px;
 	}
 	&__wrapper2 {
@@ -96,7 +105,7 @@
 		max-width: 100%;
 		margin: 0 auto;
 		padding: 10px;
-		background-color: $main-color;
+		//background-color: $main-color;
 		border-radius: 10px;
 		font-size: 20px;
 	}
