--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -41,7 +41,8 @@ body {
 			margin: 0 auto 20px auto;
 			font-size: 20px;
 			color: $main-color;
-			padding: 15px;
+			padding-left: 15px;
+			padding-right: 15px;
 		}
 		label {
 			display: block;
